# capnp-demo

./: .gitignore  Cargo.toml  README.MD  log.txt  start.sh
backend/: Cargo.toml  client.rs  start.sh
backend/src/: main.rs
backend/src/handler/: mod.rs  test_handler.rs
capnp-builder/: Cargo.toml  build.rs
capnp-builder/assets/: test.capnp
capnp-builder/src/: lib.rs
grpc-material/: Cargo.toml  build.rs
grpc-material/protos/: test.proto
grpc-material/src/grpc/: mod.rs  test.rs  test_grpc.rs
service/: Cargo.toml
service/src/: lib.rs  main.rs
service/src/impl/: test.rs
service/src/implement/: mod.rs  test_service_impl.rs
